--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,7 +8,7 @@
         <div class="w-100 d-flex justify-content-end">
             <ul class="navbar-nav mb-2 mb-lg-0">
                 <!--li class="nav-item dropdown"-->
-                <li class="nav-item dropstart">
+                <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle button-user" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="bi bi-person-vcard-fill"></i>
                   </a>
@@ -20,11 +20,10 @@
                       <li><a class="dropdown-item" href="#">Pedidos</a></li>
                       <li><a class="dropdown-item" href="#">Métodos de pago</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" (click)="logout()">Desconectar</a></li>
+                      <li><a class="dropdown-item" href="#" (click)="logout()">Desconectar</a></li>
                     } @else {
                       <li><a class="dropdown-item" routerLink="/login">Login</a></li>
                     }
-                    
                   </ul>
                 </li>
               </ul>
