--- a/src/app/components/album-list/album-list.component.html
+++ b/src/app/components/album-list/album-list.component.html
@@ -1,11 +1,11 @@
 @if(albums$ | async; as albums) {
 
-<div class="row row-cols-1 row-cols-md-3 g-4">
-  <div class="position-fixed buttom-0 end-0 text-end">
+<div class="row row-cols-1 row-cols-md-4 g-4">
+  <!-- <div class="position-fixed buttom-0 end-0 text-end">
     <a class="btn btn-primary" role="button" [routerLink]="['/']">
       <i class="bi bi-plus-circle"></i>
     </a>
-  </div>
+  </div> -->
   @for (album of albums; track album.id) {
   <div class="col">
     <div class="card">
@@ -13,14 +13,15 @@
       <img [src]="album.foto" class="card-img-top" [alt]="album.nombre">
       } @else {
       <span class="card-img-top m-2">
-        <svg class="bi" width="128" height="128" fill="gray">
+        <svg class="bi" width="128" height="128" fill="#D3D3D3">
           <use xlink:href="bootstrap-icons.svg#file-music" />
         </svg>
       </span>
       }
       <div class="card-body">
-        <p class="card-title">{{ album.nombre }}</p>
-        <h5 class="card-text">{{ album.precio | currency:'EUR' }}</h5>
+        <h5 class="card-title">{{ album.nombre }}</h5>
+        <p class="card-text"><small class="text-muted">{{ getGenre(album) }}</small></p>
+        <h6 class="card-text">{{ album.precio | currency:'EUR' }}</h6>
         <div class="d-flex justify-content-between">
           <button [routerLink]="['/']" class="btn btn-outline-primary btn-sm"><i class="bi bi-bag-plus"></i> Añadir al
             carrito</button>
