--- a/src/app/components/album-detail/album-detail.component.html
+++ b/src/app/components/album-detail/album-detail.component.html
@@ -1,1 +1,52 @@
-<p>album-detail works!</p>
+@if(album$ | async; as album) {
+<!-- Product section-->
+<section class="py-5">
+  <div class="container px-4 px-lg-5 my-5">
+    <div class="row gx-4 gx-lg-5 align-items-center">
+      <div class="col-md-5">
+        <!-- <img class="card-img-top mb-5 mb-md-0"src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="..." /> -->
+        @if (album?.foto) {
+        <img [src]="album.foto" class="card-img-top mb-5 mb-md-0" [alt]="album.nombre">
+        } @else {
+        <span class="card-img-top mb-5 mb-md-0">
+          <svg class="bi" width="400" height="500" fill="#D3D3D3">
+            <use xlink:href="bootstrap-icons.svg#file-music" />
+          </svg>
+        </span>
+        }
+      </div>
+      <div class="col-md-7">
+        <div class="small mb-1">ID-PROD: {{ album.id }}</div>
+        <h1 class="display-5 fw-bolder">{{ album.nombre }}</h1>
+        <div class="fs-5 mb-5">
+          <span>{{ album.precio | currency:'EUR' }}</span>
+        </div>
+        <div class="fs-5">
+          <span>{{album.autor.nombre }}</span>
+        </div>
+        <div class="fs-5">
+          <p class="lead">{{ getGenre(album) }}</p>
+        </div>
+        <div class="d-flex">
+          <input class="form-control text-center me-3" type="num" [(ngModel)]="amountToAddCart" style="max-width: 3rem" />
+          <button class="btn btn-outline-dark flex-shrink-0" type="button" (click)="addToCart(album)">
+            <i class="bi-cart-fill me-1"></i>
+            Añadir al carrito
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Related items section-->
+<section class="py-5 bg-light">
+  <div class="container px-4 px-lg-5 mt-5">
+    <h2 class="fw-bolder mb-4">Lista de canciones</h2>
+    <ul class="list-group list-group-flush">
+    @for(p of album.pistas; track p.id) {
+      <li class="list-group-item">{{ p.nombre }}</li>
+    }
+    </ul>
+  </div>
+</section>
+}
