--- a/src/app/components/album-detail/album-detail.component.html
+++ b/src/app/components/album-detail/album-detail.component.html
@@ -27,25 +27,28 @@
         <div class="fs-5">
           <p class="lead">{{ getGenre(album) }}</p>
         </div>
+        @if(isUserLogin) {
         <div class="d-flex">
-          <input class="form-control text-center me-3" type="num" [(ngModel)]="amountToAddCart" style="max-width: 3rem" />
+          <input class="form-control text-center me-3" type="num" [(ngModel)]="amountToAddCart"
+            style="max-width: 3rem" />
           <button class="btn btn-outline-dark flex-shrink-0" type="button" (click)="addToCart(album)">
             <i class="bi-cart-fill me-1"></i>
             Añadir al carrito
           </button>
         </div>
+        }
       </div>
     </div>
   </div>
 </section>
-<!-- Related items section-->
+<!-- Pistas section-->
 <section class="py-5 bg-light">
   <div class="container px-4 px-lg-5 mt-5">
     <h2 class="fw-bolder mb-4">Lista de canciones</h2>
     <ul class="list-group list-group-flush">
-    @for(p of album.pistas; track p.id) {
+      @for(p of album.pistas; track p.id) {
       <li class="list-group-item">{{ p.nombre }}</li>
-    }
+      }
     </ul>
   </div>
 </section>
