Implements unit test

--- a/src/app/components/album-detail/album-detail.component.html
+++ b/src/app/components/album-detail/album-detail.component.html
@@ -1,6 +1,6 @@
 @if(album$ | async; as album) {
 <!-- Product section-->
-<section class="py-5">
+<section data-test-id="album-detail-id" class="py-5">
   <div class="container px-4 px-lg-5 my-5">
     <div class="row gx-4 gx-lg-5 align-items-center">
       <div class="col-md-5">
