--- a/src/app/components/album-list/album-list.component.html
+++ b/src/app/components/album-list/album-list.component.html
@@ -1,6 +1,6 @@
 @if(albums$ | async; as albums) {
 
-<div class="row row-cols-1 row-cols-md-4 g-4">
+<div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-4">
   <!-- <div class="position-fixed buttom-0 end-0 text-end">
     <a class="btn btn-primary" role="button" [routerLink]="['/']">
       <i class="bi bi-plus-circle"></i>
