Add created album page and add author service

--- a/src/app/components/side-menu/side-menu.component.html
+++ b/src/app/components/side-menu/side-menu.component.html
@@ -92,7 +92,7 @@
   </ul>
   @if (user) {
   <div class="nav-item m-1 mb-4">
-    <a href="#" class="nav-link align-middle px-0 text-white">
+    <a routerLink="/album/new" class="nav-link align-middle px-0 text-white">
       <i class="fs-4 bi-plus-square"></i> <span class="ms-1 d-none d-sm-inline">Nuevo disco</span>
     </a>
   </div>
